Refactor banking closure workflows